tests/checker/fail/dispatch_arm_wrong_variant.can
Unit => Program {
    True() -> (
        * False => Unit { "f".print() }
        * None => Unit { "wrong".print() }
    )
}
